--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.mp3 filter=lfs diff=lfs merge=lfs -text
+Valentine[[:space:]]Website/Valentine/VGLAE/Music/Matilda.mp3 filter=lfs diff=lfs merge=lfs -text
 Valentine[[:space:]]Website/Valentine/VGLAE/Music/*.mp3 filter=lfs diff=lfs merge=lfs -text
